[package]
description = "Substrate network protocol"
name = "sc-network"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-network"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.7"

[dependencies]
async-trait = "0.1"
async-std = "1.6.5"
bitflags = "1.2.0"
bs58 = "0.4.0"
cid = "0.6.0"
bytes = "1"
codec = { package = "parity-scale-codec", version = "2.2", features = ["derive"] }
derive_more = "0.99.2"
either = "1.5.3"
erased-serde = "0.3.9"
fnv = "1.0.6"
fork-tree = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
futures = "0.3.9"
futures-timer = "3.0.2"
asynchronous-codec = "0.5"
hex = "0.4.0"
ip_network = "0.3.4"
linked-hash-map = "0.5.4"
linked_hash_set = "0.1.3"
lru = "0.6.5"
log = "0.4.8"
nohash-hasher = "0.2.0"
parking_lot = "0.11.1"
pin-project = "1.0.4"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
prost = "0.7"
rand = "0.7.2"
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-peerset = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.41"
smallvec = "1.5.0"
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
thiserror = "1"
unsigned-varint = { version = "0.6.0", features = ["futures", "asynchronous_codec"] }
void = "1.0.2"
wasm-timer = "0.2"
zeroize = "1.2.0"

[dependencies.libp2p]
version = "0.37.1"

[target.'cfg(target_os = "unknown")'.dependencies.libp2p]
version = "0.37.1"
default-features = false
features = ["identify", "kad", "mdns", "mplex", "noise", "ping", "request-response", "tcp-async-io", "websocket", "yamux"]


[dev-dependencies]
assert_matches = "1.3"
libp2p = { version = "0.37.1", default-features = false }
quickcheck = "1.0.3"
rand = "0.7.2"
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-test-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
substrate-test-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
tempfile = "3.1.0"

[features]
default = []
